--- a/templates/main/registration/index.html.twig
+++ b/templates/main/registration/index.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ml-md-auto">
+    <div class="col-md-12 col-lg-10 ml-md-auto">
       <div class="card bg-light mb-3 mt-5" style="width: 800px">
         <div class="card-body">
           <div class="card-header mb-3">Registration Form</div>
