--- a/templates/security/user_login.html.twig
+++ b/templates/security/user_login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
   <div class="row">
-    <div class="col-md-10 ml-md-auto">
+    <div class="col-md-12 ml-md-auto col-lg-10">
       <div class="">
         <div class="card bg-light mb-3 mt-5" style="width: 800px;">
           <div class="card-body">
